c/examples/writing-a-c-compiler-tests/tests/chapter_16/invalid_parse/invalid_type_specifier.c
int main(void)
{
    // cannot combine char with any other type specifier
    // except signed and unsigned
    int char x = 10;
    return x;
}